force-app/main/default/objects/sbaa__Approver__c/fields/Approver_User_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>Approver_User_Name_Copy__c</fullName>
    <description>This field is used to avoid duplicate approver Record, used in Approver_User_name_Copy record triggered Flow and Duplicate Rules.

GTMS-26351: Avoid duplicate records for approvers</description>
    <label>Approver User Name Copy</label>
    <length>244</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>