force-app/main/default/objects/sbaa__Approver__c/listViews/All_Approvers.listView-meta.xml
<ListView>
    <fullName>All_Approvers</fullName>
    <columns>NAME</columns>
    <columns>sbaa__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Approvers</label>
</ListView>