force-app/main/default/objects/sbaa__Approver__c/listViews/My_Approvals.listView-meta.xml
<ListView>
    <fullName>My_Approvals</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Approvals</label>
</ListView>